# java-installer

./: Cargo.toml  README.md
src/: cli.rs  main.rs
src/installer/: download.rs  env.rs  extracter.rs  installer.rs  mod.rs  utils.rs
