[package]
name = "java-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.3"
tar = "0.4"
flate2 = "1.0"
zip = "2.5.0"
indicatif = "0.17"
anyhow = "1.0"
cfg-if = "1.0"
winreg = "0.55.0"
winapi = { version = "0.3", features = ["winuser"] }
dirs = "6.0.0"